# jdbc-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
docs/: CONFIGURATION.md  EXAMPLES.md  MAINTENANCE.md  README.md  USAGE.md  WINDSURF.md
src/jdbc_mcp_server/: __init__.py  __main__.py  config.py  errors.py  server.py  utils.py
src/jdbc_mcp_server/database/: __init__.py  base.py  db2.py  mysql.py  postgresql.py  sqlite.py
tests/: test_base_adapter.py  test_config.py  test_server.py
